search modal added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-<main class="container ">
+<main class="container d-flex flex-column align-items-center gap-5">
   <app-carousel></app-carousel>
-
- 
+  <app-search></app-search>
 </main>
