--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExample" class="carousel carousel-fade">
+<div id="carouselExample" class="container carousel carousel-fade">
   <div class="carousel-indicators">
     <button
       type="button"
@@ -27,6 +27,7 @@
         src="https://lh6.googleusercontent.com/1GZmmWHTvxA5tM-RSylzrnMxsOE14R86y9MzYKSy85CQxTy7rF9FxkbfvFHe7vH428_qrAyKx0p4Jfx7T-vhiQ1qzKO7FR2ka_LnNwcLi4wsnmRWv22OqfPxlaOGgoocbgm9lLkn-zuIWvtqZxxd_nt-3588SfRRyfhbH0NEGh5Roj9ADlQM6IV_4KYELg"
         class="d-block w-100 rounded-4"
         alt="..."
+         style="max-height: 500px; object-fit: cover;"
       />
     </div>
     <div class="carousel-item">
@@ -34,13 +35,15 @@
         src="https://i.ytimg.com/vi/uT5X9aDYcPw/maxresdefault.jpg"
         class="d-block w-100 rounded-4"
         alt="..."
+         style="max-height: 500px; object-fit: cover;"
       />
     </div>
     <div class="carousel-item">
       <img
-        src="https://www.ruetir.com/wp-content/uploads/2023/05/You-wont-believe-how-many-Spider-Man-there-are.jpg"
+        src="https://i.ytimg.com/vi/BpdDN9d9Jio/maxresdefault.jpg"
         class="d-block w-100 rounded-4"
         alt="..."
+         style="max-height: 500px; object-fit: cover;"
       />
     </div>
   </div>
