--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <header class="navbar m-3">
   <nav class="container">
-    <a class="navbar-brand text-white">GB Watch</a>
+    <a class="navbar-brand text-white fs-5">GB Watch</a>
     <img
       src="../../assets/menu.png"
+      style="transform: scale(120%)"
       alt="menu"
       data-bs-toggle="offcanvas"
       href="#offcanvasExample"
