service for api movie request / search a movie

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <main class="container d-flex flex-column align-items-center gap-5">
   <app-carousel></app-carousel>
   <app-search></app-search>
+ <app-movie-searched></app-movie-searched>
 </main>
+
